# euclid-galaxy-morphology-saes

./: .gitignore  LICENSE  README.md  matryoshka_sae_config.toml  pyproject.toml
src/: __init__.py  analyze_pca.py  analyze_sae_features.py  create_embeddings.py  create_mae_embeddings.py  make_figures.py  train_matryoshka_sae.py  train_matryoshka_sae_ssl.py  train_sae.py
src/.ipynb_checkpoints/: analyze_features-checkpoint.py  create_embeddings-checkpoint.py  train_sae-checkpoint.py
src/config/: mae_matryoshka_sae_config.toml  matryoshka_sae_config.toml
src/models/: __init__.py  matryoshka_sae.py
src/utils/: __init__.py  data_loading.py  reproducibility.py  visualization.py
